--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
   <!-- Page content -->
   <div class="card-deck">
     <a href="04/index.html" class="card card-shadow link-unstyled mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Uppgift 4</h5>
-          <p class="card-text">Gör en sida i HTML5 där du skriver kortfattat om en bra film du sett.</p>
-        </div>
-      </a>
+      <div class="card-body">
+        <h5 class="card-title">Uppgift 4</h5>
+        <p class="card-text">Gör en sida i HTML5 där du skriver kortfattat om en bra film du sett.</p>
+      </div>
+    </a>
+
+    <a href="05/index.html" class="card card-shadow link-unstyled mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Uppgift 5</h5>
+        <p class="card-text">I denna uppgift ska du ta en halvfärdig webbsida, där HTML filen är klar och skriva egen CSS-kod i den externa CSS-filen som du själv gör.</p>
+      </div>
+    </a>
   </div>
 
   <!-- Footer -->
