Fixed HTML.png in index.html

--- a/05/index.html
+++ b/05/index.html
@@ -30,7 +30,7 @@
       <header>
         <h2>Grunderna i HTML</h2>
       </header>
-      <img src="HTML.jpg" alt="HTML Logotyp">
+      <img src="HTML.png" alt="HTML Logotyp">
       <div class="text">
         <p>En hemsida består utav textfiler, skrivna i ren text. HTML är ett av många språk som används för att skapa hemsidor. Webbläsarens jobb är att översätta dessa språk och sedan visa den färdiga hemsidan för besökaren.</p>
         <p>Precis som en människa så består HTML av kroppsdelar, den har ett huvud som tänker och en kropp att visa upp. För att kunna skriva in dessa kroppsdelar så börjar vi med att skapa en mapp på datorn för våran första hemsida. I våra exempel
