Minify banner png 08

--- a/08/index.html
+++ b/08/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <img id="sea" src="banner.png" alt="HTML logga" />
+    <img id="sea" src="banner-min.png" alt="HTML logga" />
   </header>
   <section>
     <article>
