--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         <p class="card-text">I denna uppgift ska du ta en halvfärdig webbsida, där HTML filen är klar och skriva egen CSS-kod i den externa CSS-filen som du själv gör.</p>
       </div>
     </a>
+
+    <a href="08/index.html" class="card card-shadow link-unstyled mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Uppgift 8</h5>
+        <p class="card-text">Din uppgift är att göra en responsiv webbsida. Alltså en HTML och en CSS sida som en övning inför nästa uppgift.</p>
+      </div>
+    </a>
+    
   </div>
 
   <!-- Footer -->
