Add functioning navbar

--- a/09/index.html
+++ b/09/index.html
@@ -31,15 +31,12 @@
   <nav>
     <ul class="menu">
       <li class="logo"><img src="hotell_logo_crop.png" alt="Hotellets logga" id="navlogo"></li>
-      <li class="item"><a href="#">Home</a></li>
-      <li class="item"><a href="#">About</a></li>
-      <li class="item"><a href="#">Services</a></li>
-      <li class="item"><a href="#">Features</a></li>
-      <li class="item"><a href="#">Blog</a></li>
-      <li class="item"><a href="#">Contact</a></li>
+      <li class="item item-home"><a href="#"><i class="fas fa-home"></i></a></li>
+      <li class="item item-food"><a href="#">RESTAURANG</a></li>
+      <li class="item"><a href="#">HITTA</a></li>
+      <li class="item"><a href="#">KONTAKT</a></li>
 
-      <li class="item button"><a href="#">Log In</a></li>
-      <li class="item button secondary"><a href="#">Boka</a></li>
+      <li class="item button item-green"><a href="#">BOKA</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
 
     </ul>
