Add hover animation

--- a/09/index.html
+++ b/09/index.html
@@ -9,25 +9,6 @@
 </head>
 
 <body>
-  <!--<nav>
-    <ul class="menu">
-      <li><a href="index.html" id="start"><i class="fas fa-home"></i></a></li>
-      <li><a href="restaurang.html" id="restaurang">RESTAURANG</a></li>
-
-      <li><img src="hotell_logo_crop.png" alt="Hotellets logga" id="navlogo" style="display: none;"></li>
-
-      <li><a href="hitta.html">HITTA</a></li>
-      <li><a href="kontakt.html">KONTAKT</a></li>
-      <li class="item-green"><a href="boka.html">BOKA</a></li>
-
-      <li>
-        <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </li>
-
-    </ul>
-  </nav>-->
   <nav>
     <ul class="menu">
       <li class="logo"><img src="hotell_logo_crop.png" alt="Hotellets logga" id="navlogo"></li>
@@ -67,7 +48,9 @@
       Donec lobortis turpis quis viverra venenatis. Aliquam ac elit laoreet, pretium quam in, mattis ligula.</p>
   </aside>
 
-  <footer></footer>
+  <footer>
+
+  </footer>
 
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
