--- a/09/index.html
+++ b/09/index.html
@@ -14,10 +14,11 @@
       <li class="logo"><img src="hotell_logo_crop.png" alt="Hotellets logga" id="navlogo"></li>
       <li class="item item-home"><a href="#"><i class="fas fa-home"></i></a></li>
       <li class="item item-food"><a href="#">RESTAURANG</a></li>
+
       <li class="item"><a href="#">HITTA</a></li>
       <li class="item"><a href="#">KONTAKT</a></li>
+      <li class="item item-button item-green"><a href="#">BOKA</a></li>
 
-      <li class="item button item-green"><a href="#">BOKA</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
 
     </ul>
@@ -49,7 +50,21 @@
   </aside>
 
   <footer>
+    <section>
+      <p>Storgatan 1, 213 45 Storstad, Sverige</p>
+    </section>
 
+    <section>
+      <p>Bright Hotell © 2020</p>
+    </section>
+
+    <section>
+      <a href="#" target="_blank"><i class="fab fa-tripadvisor"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+    </section>
   </footer>
 
   <script
