--- a/09/boka.html
+++ b/09/boka.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Bright Hotell</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/boka.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -25,29 +25,49 @@
     </ul>
   </nav>
 
-  <img src="images/hotellet2.jpg" alt="Hotellbyggnad" class="coverphoto">
-
-  <header>
-    <h1>Bright Hotell</h1>
-    <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
-  </header>
-
   <section>
-    <p>Suspendisse pharetra risus quis gravida dapibus. Etiam volutpat laoreet sem, nec vestibulum orci elementum ac.
-      Nunc sed massa eu nisi commodo volutpat. Nullam lobortis nisi et leo ultricies, tristique dictum purus ultricies.
-      Fusce vulputate nisl elit, vitae elementum mi elementum at. Sed et diam lectus. Suspendisse potenti.
-      Curabitur luctus id arcu id mattis. Morbi vehicula arcu augue, et bibendum nisi venenatis eu. Mauris
-      elementum tortor sit amet erat congue, nec bibendum sem vulputate.
-      Donec lobortis turpis quis viverra venenatis. Aliquam ac elit laoreet, pretium quam in, mattis ligula.</p>
+    <h2>Boka rum</h2>
+    <form class="" action="index.html" method="post">
+      <label for="ankomst">Ankomst:</label>
+      <input type="date" id="ankomst" name="ankomst" value="2020-04-23"
+       min="2020-04-23" max="2021-04-23">
+
+       <label for="avresa">Avresa:</label>
+       <input type="date" id="avresa" name="avresa" value="2020-04-23"
+        min="2020-04-23" max="2021-04-23">
+
+        <label for="antalrum">Antal rum:</label>
+        <select id="antalrum">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+
+        <label for="antalvuxna">Antal vuxna:</label>
+        <select id="antalvuxna">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+
+        <label for="antalbarn">Antal barn:</label>
+        <select id="antalbarn">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+
+        <input type="submit" value="SÖK" class="item-green">
+    </form>
   </section>
 
   <aside>
-    <p>Suspendisse pharetra risus quis gravida dapibus. Etiam volutpat laoreet sem, nec vestibulum orci elementum ac.
-      Nunc sed massa eu nisi commodo volutpat. Nullam lobortis nisi et leo ultricies, tristique dictum purus ultricies.
-      Fusce vulputate nisl elit, vitae elementum mi elementum at. Sed et diam lectus. Suspendisse potenti.
-      Curabitur luctus id arcu id mattis. Morbi vehicula arcu augue, et bibendum nisi venenatis eu. Mauris
-      elementum tortor sit amet erat congue, nec bibendum sem vulputate.
-      Donec lobortis turpis quis viverra venenatis. Aliquam ac elit laoreet, pretium quam in, mattis ligula.</p>
+    <img src="images/room.jpg" alt="Ett rum på hotellet" class="photo">
   </aside>
 
   <footer>
@@ -74,7 +94,6 @@
     crossorigin="anonymous" defer></script>
   <script src="https://kit.fontawesome.com/2bc2ac9fed.js" crossorigin="anonymous" defer></script>
   <script src="js/script.js" charset="utf-8" defer></script>
-
 
 </body>
 
