--- a/09/kontakt.html
+++ b/09/kontakt.html
@@ -41,6 +41,8 @@
       <input type="submit" value="SKICKA" class="item-green">
     </form>
 
+    <a href="mailto:testadress@mail.com">(Eller skicka ett mail direkt till oss <u>här</u>!)</a>
+
   </main>
 
   <footer>
