--- a/09/mat.html
+++ b/09/mat.html
@@ -39,10 +39,10 @@
       <label for="tid">Tid</label>
       <input type="datetime-local" id="tid" name="tid">
 
-        <label for="antalvuxna">Vuxna:</label>
+        <label for="antalvuxna">Vuxna</label>
         <input type="text" name="antalvuxna" value="">
 
-        <label for="antalbarn">Barn:</label>
+        <label for="antalbarn">Barn</label>
         <input type="text" name="antalbarn" value="">
 
         <input type="submit" value="RESERVERA" class="item-green">
