--- a/09/boka.html
+++ b/09/boka.html
@@ -28,14 +28,14 @@
   <main>
     <h2>Boka rum</h2>
     <form action="index.html" method="post">
-      <label for="ankomst">Ankomst:</label>
+      <label for="ankomst">Ankomst</label>
       <input type="date" id="ankomst" name="ankomst">
 
-       <label for="avresa">Avresa:</label>
+       <label for="avresa">Avresa</label>
        <input type="date" id="avresa" name="avresa" value="2020-04-23"
         min="2020-04-23" max="2021-04-23">
 
-        <label for="antalrum">Antal rum:</label>
+        <label for="antalrum">Antal rum</label>
         <select id="antalrum">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -43,16 +43,15 @@
           <option value="4">4</option>
         </select>
 
-        <label for="antalvuxna">Antal vuxna:</label>
+        <label for="antalvuxna">Antal vuxna</label>
         <select id="antalvuxna">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
-          <option value="5">5</option>
         </select>
 
-        <label for="antalbarn">Antal barn:</label>
+        <label for="antalbarn">Antal barn</label>
         <select id="antalbarn">
           <option value="1">1</option>
           <option value="2">2</option>
