--- a/09/mat.html
+++ b/09/mat.html
@@ -50,7 +50,7 @@
   </main>
 
   <aside>
-    <img src="images/mat.jpg" alt="Servering vid havet" class="photo">
+    <img src="images/mat_min.jpg" alt="Servering vid havet" class="photo">
   </aside>
 
   <footer>
