Update landing page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
         <p class="card-text">Din uppgift är att göra en responsiv webbsida. Alltså en HTML och en CSS sida som en övning inför nästa uppgift.</p>
       </div>
     </a>
-    
+
+    <a href="09/index.html" class="card card-shadow link-unstyled mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Uppgift 9</h5>
+        <p class="card-text">Använda Grid för att göra en responsiv hotell webbplats med Atom.</p>
+      </div>
+    </a>
+
   </div>
 
   <!-- Footer -->
