--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
   <!-- Page content -->
   <div class="card-deck">
     <a href="04/index.html" class="card card-shadow link-unstyled mb-3">
-      <div class="card-body">
+      <div class="card-body" style="background-color: #28a745">
         <h5 class="card-title">Uppgift 4</h5>
         <p class="card-text">Gör en sida i HTML5 där du skriver kortfattat om en bra film du sett.</p>
       </div>
     </a>
 
     <a href="05/index.html" class="card card-shadow link-unstyled mb-3">
-      <div class="card-body">
+      <div class="card-body" style="background-color: #28a745">
         <h5 class="card-title">Uppgift 5</h5>
         <p class="card-text">I denna uppgift ska du ta en halvfärdig webbsida, där HTML filen är klar och skriva egen CSS-kod i den externa CSS-filen som du själv gör.</p>
       </div>
     </a>
 
     <a href="08/index.html" class="card card-shadow link-unstyled mb-3">
-      <div class="card-body">
+      <div class="card-body" style="background-color: #28a745">
         <h5 class="card-title">Uppgift 8</h5>
         <p class="card-text">Din uppgift är att göra en responsiv webbsida. Alltså en HTML och en CSS sida som en övning inför nästa uppgift.</p>
       </div>
@@ -61,9 +61,9 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        © 2019 by Daniel Adu-Gyan
+        © 2020 by Daniel Adu-Gyan
         <div class="float-right">
-          <a class="px-md-1" href="https://github.com/dannyadu" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="px-md-1" href="https://github.com/danieladugyan" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </footer>
