Post validation tweaks

--- a/09/kontakt.html
+++ b/09/kontakt.html
@@ -30,13 +30,13 @@
     <h2>Kontakt</h2>
     <form action="index.html" method="post">
       <label for="namn">Namn</label>
-      <input type="text" name="namn" value="">
+      <input type="text" id="namn" value="">
 
       <label for="email">E-post</label>
-      <input type="email" name="email" value="">
+      <input type="email" id="email" value="">
 
       <label for="meddelande">Meddelande</label>
-      <textarea name="meddelande" rows="15" cols="80"></textarea>
+      <textarea id="meddelande" rows="15" cols="80"></textarea>
 
       <input type="submit" value="SKICKA" class="item-green">
     </form>
