--- a/09/mat.html
+++ b/09/mat.html
@@ -37,13 +37,13 @@
     <h2>Boka bord</h2>
     <form action="index.html" method="post">
       <label for="tid">Tid</label>
-      <input type="datetime-local" id="tid" name="tid">
+      <input type="datetime-local" id="tid">
 
         <label for="antalvuxna">Vuxna</label>
-        <input type="text" name="antalvuxna" value="">
+        <input type="text" id="antalvuxna" value="">
 
         <label for="antalbarn">Barn</label>
-        <input type="text" name="antalbarn" value="">
+        <input type="text" id="antalbarn" value="">
 
         <input type="submit" value="RESERVERA" class="item-green">
     </form>
