--- a/09/hitta.html
+++ b/09/hitta.html
@@ -60,7 +60,7 @@
   </div>
 
   <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d72186.40001094324!2d12.945933139214413!3d55.57024559477747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465305a574c491ff%3A0xd3a905dfbd4888e5!2zTWFsbcO2!5e0!3m2!1ssv!2sse!4v1588573979550!5m2!1ssv!2sse"
-  width="100%" height="100%" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
   <footer>
     <section>
