--- a/09/boka.html
+++ b/09/boka.html
@@ -65,7 +65,7 @@
   </main>
 
   <aside>
-    <img src="images/room.jpg" alt="Ett rum på hotellet" class="photo">
+    <img src="images/room_min.jpg" alt="Ett rum på hotellet" class="photo">
   </aside>
 
   <footer>
